--- a/templates/auth.html
+++ b/templates/auth.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../assets/images/c2c-logo.png">
     <title>Sign In | C2C Journeys</title>
     <meta name="description"
         content="Sign in to your C2C Journeys account to manage your bookings, or sign up for a new account.">
