--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../assets/images/c2c-logo.png">
     <meta name="description"
         content="Frequently Asked Questions - C2C Journeys. Find answers about booking flights, refunds, data security, and more.">
     <title>FAQs | C2C Journeys</title>
