--- a/templates/hotel-booking.html
+++ b/templates/hotel-booking.html
@@ -243,7 +243,8 @@
                             <label>Destination</label>
                             <div class="input-wrapper destination-autocomplete">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <input type="text" id="destination" placeholder="Where to?" autocomplete="off" required>
+                                <input type="text" id="destination" placeholder="Where to?" autocomplete="off" required
+                                    title="Enter a city, hotel name, landmark, or airport code">
                                 <button type="button" class="clear-destination" id="clearDestination"
                                     style="display: none;">
                                     <i class="fas fa-times"></i>
