--- a/templates/hotel-details.html
+++ b/templates/hotel-details.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../assets/images/c2c-logo.png">
     <meta name="description" content="Hotel Details - C2C Journeys">
     <title>Hotel Details | Coast To Coast Journeys</title>
 
