--- a/templates/index.html
+++ b/templates/index.html
@@ -495,7 +495,7 @@
         <div class="container">
             <div class="header-content">
                 <!-- Hamburger Menu Button -->
-                <button class="hamburger-menu" id="hamburgerMenu">
+                <button class="hamburger-menu" id="hamburgerMenu" aria-label="Open navigation menu">
                     <span></span>
                     <span></span>
                     <span></span>
