--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../assets/images/c2c-logo.png">
     <meta name="description"
         content="About Us - C2C Journeys. Learn about our mission, values, and commitment to making travel simple and reliable.">
     <title>About Us | C2C Journeys</title>
