--- a/templates/flight-results.html
+++ b/templates/flight-results.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../assets/images/c2c-logo.png">
     <meta name="description" content="Search results for flights - C2C Journeys">
     <title>Flight Search Results | Coast To Coast Journeys</title>
 
