--- a/templates/visa.html
+++ b/templates/visa.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../assets/images/c2c-logo.png">
     <meta name="description"
         content="Visa Services - C2C Journeys. Apply for visa assistance for your international travel.">
     <title>Visa Services | C2C Journeys</title>
